--- a/src/components/spaces/breeding/breeding-container.sass
+++ b/src/components/spaces/breeding/breeding-container.sass
@@ -8,6 +8,8 @@
     cursor: url('../../../assets/inspect-cursor-nests.png') 6 5, auto
   &.breed
     cursor: url('../../../assets/breed-cursor.png') 6 3, auto
+  &.gametes
+    cursor: url('../../../assets/inspect-cursor-gametes.png') 6 5, auto
 
 .breeding-toolbar
   height: 100px
@@ -60,6 +62,7 @@
     color: $color-simdata-brick-light3
   &.gametes
     width: 95px
+    cursor: auto
 
   &.sticky
     color: $color-white
@@ -98,8 +101,11 @@
     width: 54px
     &.inner-button
       width: 42px
+    &.unselected
+      cursor: pointer
     &.selected
       background-color: $color-nav-shamrock-dark1
+      pointer-events: none
       .label
         color: white
       .icon
