--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -312,8 +312,8 @@
 
   .header .title
     position: relative
-    left: 15px
-    width: 200px
+    width: 100%
+    margin-right: 90px
     flex-grow: 0
 
 .right-abutment
