Randomize nest backgrounds
[#170775051]

--- a/src/components/spaces/breeding/nest-pair.sass
+++ b/src/components/spaces/breeding/nest-pair.sass
@@ -147,3 +147,7 @@
       color: $color-white
       top: 78px
       left: 108px
+    &.white
+      color: $color-white
+    &.black
+      color: $color-black
