Update gamete inspection background color

--- a/src/components/spaces/breeding/breeding-inspect.sass
+++ b/src/components/spaces/breeding/breeding-inspect.sass
@@ -26,6 +26,8 @@
       background-color: $color-simdata-brick-light1
       border-radius: 84px
       opacity: .75
+      &.gamete
+        background-color: $color-nav-shamrock-light1
       &.single
         width: 175px
         left: 119px
