Fix authoring page scrolling
[#171224237]

--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -16,6 +16,7 @@
     position: initial
     height: 100vh
     overflow: scroll
+    align-items: stretch
 
 .outer-scale-wrapper
   background-color: white
