Layout fixes on mobile

--- a/src/components/inspect-panel.sass
+++ b/src/components/inspect-panel.sass
@@ -79,6 +79,7 @@
     justify-content: center
     align-items: center
     margin-bottom: 40px
+    height: 74px
     .gamete-panel-container
       display: flex
       flex-direction: column
