--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -166,12 +166,14 @@
       left: 5px
       font-size: 10px
       font-weight: 400
+      line-height: 10px
     .alleles-message
       color: $color-nav-cinder-dark2
       top: 50px
       left: 5px
       font-size: 10px
       font-weight: 400
+      line-height: 10px
     .reset-button-container
       top: 190px
       left: 5px
