Prevent top charts from blocking pointer-events

--- a/src/components/charts/chart.sass
+++ b/src/components/charts/chart.sass
@@ -80,6 +80,7 @@
         transition: all 0.5s
         opacity: 1
       &.hidden
+        pointer-events: none
         flex-grow: 0
         height: 0%
         &>div
