Extract out slider to populations-charts
(...would have made more sense to have done this from the start, but
this is, like, version 4...)

--- a/src/components/charts/chart.sass
+++ b/src/components/charts/chart.sass
@@ -94,7 +94,11 @@
 
       .chart-container
         position: absolute
-        bottom: 59px
+        bottom: 75px
+
+      .line-chart-controls
+        position: absolute
+        bottom: 55px
 
     .top-chart
       display: flex
