Disable line chart instead of hiding it; new color

--- a/src/components/colors.scss
+++ b/src/components/colors.scss
@@ -19,6 +19,8 @@
   chartColor9:  $color5;
   chartColor10: $color6;
 
+  disabledColor5: $color1-2;
+
   colorChartRed: $color-chart-red;
   colorChartYellow: $color-chart-yellow;
   colorDataMouseBrownLightRep: $color-data-mousebrown-light-rep;
