Update pea images and data colors

--- a/src/components/colors.scss
+++ b/src/components/colors.scss
@@ -27,5 +27,9 @@
   colorDataMouseBrownMediumRep: $color-data-mousebrown-medium-rep;
   colorDataMouseBrownDarkRep: $color-data-mousebrown-dark-rep;
 
+  colorDataPeaRound: $color-data-pea-round;
+  colorDataPeaWrinkled: $color-data-pea-wrinkled;
+  colorDataPeaDark: $color-data-pea-dark;
+
   gameteArrowColor: $color-nav-shamrock-dark1;
 }
