--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -132,6 +132,10 @@ $color-data-mousebrown-dark-rep: #5d3515
 $color-data-hormone: #00cc99
 $color-data-signalprotein: #29abe2
 
+$color-data-pea-round: #85ac4d
+$color-data-pea-wrinkled: #cdda5a
+$color-data-pea-dark: #326500
+
 $component-bgcolor: $color-white
 $main-content-bgcolor: $color-nav-cinder-light2
 $main-content-color: $color-nav-cinder-dark3
