Update parent and offspring images
With this optional image and subsequent ones, the logic of which image
to show resides in BackpackMouse, so the views can just access this
directly as a prop.

This is fairly messy, because which images are used in the zoomed-out
"nests" view, the parents, the offspring, and the charts, are basically
completely non-overlapping between mice and peas.

--- a/src/components/stacked-organism.sass
+++ b/src/components/stacked-organism.sass
@@ -13,10 +13,11 @@
   &:hover .inspect-stack
     opacity: .75
 
+  *
+    pointer-events: none
+
   .selection-stack
     position: absolute
-    top: 0
-    left: 0
     opacity: 0
     transition-duration: .25s
   .organism-image
