--- a/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
@@ -12,3 +12,8 @@
           margin: 0 0 0 4px
           width: 30px
           transform: none
+
+  &:nth-of-type(1), &:nth-of-type(3), &:nth-of-type(5),
+    .pair-data .nest-display .mouse-holder
+      .right-mouse
+        display: none
