Set image size by css, update pea image sizes

--- a/src/components/stacked-organism.sass
+++ b/src/components/stacked-organism.sass
@@ -22,6 +22,7 @@
     transition-duration: .25s
   .organism-image
     position: absolute
+    height: 45%
     top: 10%
     left: 50%
     top: 50%
