small lint fixes

--- a/src/components/spaces/breeding/breeding-view.pea.sass
+++ b/src/components/spaces/breeding/breeding-view.pea.sass
@@ -14,7 +14,7 @@ $low-pea: 37px
         background-size: cover
         animation: pea-pod-push-down 0.6s ease
         .offspring-container
-          margin: $high-pea -3px;
+          margin: $high-pea -3px
         // some trickery to get the right curve depending on the number of peas
         // nth-child(x):nth-last-child(y) precisely identifies a child depending on the number of siblings
         .offspring-container:nth-child(1):nth-last-child(3),
