--- a/src/components/inspect-panel.pea.sass
+++ b/src/components/inspect-panel.pea.sass
@@ -2,9 +2,30 @@
 
 .inspect-panel.pea
   .pair-container
-    .inspect-background
-      top: 40px
-      left: 41px
-      width: 338px
-      height: 175px
-      border-radius: 18px
+    &.pair
+      .inspect-background
+        top: 40px
+        left: 41px
+        width: 338px
+        height: 175px
+        border-radius: 18px
+
+      .mouse-container .stacked-organism .hetero-stack
+        transform: scaleX(0.7) scaleY(1.1)
+        border-radius: 25px
+
+    &.parent
+      .inspect-background
+        display: none
+      .mouse-container
+        .stacked-organism
+          transform: scale(1.5)
+          .hetero-stack
+            top: 15px
+            transform: scale(0.85)
+            transition-duration: 0s
+
+      &.female .hetero-stack
+          left: -15px
+      &.male .hetero-stack
+          left: 46px
