--- a/src/components/inspect-panel.pea.sass
+++ b/src/components/inspect-panel.pea.sass
@@ -17,6 +17,9 @@
           transform: scaleX(0.7) scaleY(1.1)
           border-radius: 25px
 
+        .info-row
+          justify-content: center
+
     &.self-fertilization
       .inspect-background
         width: 117px
@@ -28,6 +31,8 @@
       .inspect-background
         display: none
       .mouse-container
+        .mouse-label
+          margin-top: 35px
         .stacked-organism
           transform: scale(1.5)
           .hetero-stack
@@ -39,3 +44,18 @@
           left: -15px
       &.male .hetero-stack
           left: 46px
+
+  .pair-container .mouse-container
+    .mouse-label
+      font-size: 18px
+      margin-top: 25px
+
+    .info-row.wide
+      width: 230px
+
+    .seed-image
+      height: 20px
+      padding-right: 6px
+    .gamete-icons
+      top: 340px
+      right: 329px
