Add optional footer to inspect panel

--- a/src/components/inspect-panel.sass
+++ b/src/components/inspect-panel.sass
@@ -110,3 +110,15 @@
         background-image: url("../assets/icons/egg.svg")
       &.sperm
         background-image: url("../assets/icons/sperm.svg")
+
+  .inspect-footer
+    width: 300px
+    .footer-title
+      color: $color-simdata-brick-dark3
+      font-size: 14px
+      font-weight: 500
+      padding-bottom: 5px
+    .footer-body
+      color: $color-nav-cinder-dark2
+      font-size: 14px
+      font-weight: 400
