Add showLeftPanel to UI store; hide Collect buttons

--- a/src/components/spaces/breeding/breeding-container.sass
+++ b/src/components/spaces/breeding/breeding-container.sass
@@ -91,6 +91,7 @@
       opacity: .5
 
   .horizontal-container
+    position: relative
     display: flex
     flex-direction: row
 
@@ -116,8 +117,8 @@
       border-radius: 14px 0 0 14px
       .label
         position: absolute
-        top: 30px
-        left: 150px
+        top: 16px
+        left: 14px
     &.right
       height: 28px
       margin-left: 1px
@@ -128,8 +129,8 @@
         margin: 0
       .label
         position: absolute
-        top: 30px
-        left: 186px
+        top: 16px
+        left: 50px
     .label
       font-size: 10px
       margin: 0
