Improve hetero stack border for peas

--- a/src/components/inspect-panel.pea.sass
+++ b/src/components/inspect-panel.pea.sass
@@ -38,7 +38,7 @@
           .hetero-stack
             top: 15px
             transform: scale(0.85)
-            transition-duration: 0s
+            border-radius: 50%
 
       &.female .hetero-stack
           left: -15px
