--- a/src/components/spaces/breeding/nest-pair.pea.sass
+++ b/src/components/spaces/breeding/nest-pair.pea.sass
@@ -33,7 +33,7 @@
     height: 110px
     width: 125px
     left: 23px
-    top: -11px
+    top: -16px
     opacity: 0
     border-radius: 15px
     transform: none
@@ -45,7 +45,7 @@
     height: 110px
     width: 125px
     left: 23px
-    top: -11px
+    top: -16px
     opacity: 0
     border-radius: 15px
     transform: none
@@ -69,6 +69,11 @@
         left: 27px
       &.right
         display: none
+    .stacked-organism.pea
+      .hetero-stack
+        transform: scaleX(0.7) scaleY(1.1)
+        border-radius: 25px
+        top: 12px
 
   .pair-label
     opacity: 0.7
