"Nesting" -> "Greenhouse" button

--- a/src/components/spaces/breeding/breeding-container.pea.sass
+++ b/src/components/spaces/breeding/breeding-container.pea.sass
@@ -10,6 +10,10 @@
     cursor: url('../../../assets/inspect-cursor-gametes.png') 6 5, auto
 
 .breeding-toolbar.pea
-  .toolbar-row.align-left
-    justify-content: center
-    margin-left: 0
+  .toolbar-row
+    .breeding-button.breed
+      width: 72px
+
+    &.align-left
+      justify-content: center
+      margin-left: 0
