Peas show secondary image under chart image

--- a/src/components/spaces/breeding/breeding-data-nest-panel.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.sass
@@ -56,6 +56,15 @@
         &.current
           color: white
           opacity: 1
+    .label-footer
+      position: absolute
+      width: 65px
+      transform: translateX(-47px) translateY(51px)
+      .secondary-images
+        display: flex
+        justify-content: space-around
+        img
+          width: 16px
     .pie-chart
       margin-right: 12px
     .empty-pie
