--- a/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
@@ -14,6 +14,6 @@
           transform: none
 
   &:nth-of-type(1), &:nth-of-type(3), &:nth-of-type(5),
-    .pair-data .nest-display .mouse-holder
+    .pair-data
       .right-mouse
         display: none
