Show pea images and genotypes under chart images

--- a/src/components/spaces/breeding/breeding-data-nest-panel.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.sass
@@ -60,7 +60,7 @@
       position: absolute
       width: 65px
       transform: translateX(-47px) translateY(51px)
-      .secondary-images
+      .secondary-images, .parent-genotypes
         display: flex
         justify-content: space-around
         img
