--- a/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
@@ -12,6 +12,10 @@
           margin: 0 0 0 4px
           width: 30px
           transform: none
+    .label-footer
+      transform: translateX(-47px) translateY(52px)
+    .label-footer.with-genotype
+      transform: translateX(-47px) translateY(60px)
 
   &:nth-of-type(1), &:nth-of-type(3), &:nth-of-type(5),
     .pair-data
