--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -52,9 +52,9 @@
       align-items: center
       width: 100px
       z-index: 1
-      &.mother
+      &.left
         padding-left: 61px
-      &.father
+      &.right
         padding-right: 61px
       .parent-image
         display: flex
