Tweak parent genotype label

--- a/src/components/stacked-organism.pea.sass
+++ b/src/components/stacked-organism.pea.sass
@@ -8,5 +8,8 @@
     border-style: dashed
     transition-duration: 0s
 
-  .genotype-label.child-mouse
-    top: -2px
+  .genotype-label
+    &.child-mouse
+      top: -2px
+    &.parent-mouse
+      top: 74px
