Hide genotypes in gamete view if authored

--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -82,6 +82,12 @@
           &:hover .hover-view
             opacity: .75
             height: 45px
+          &.no-label
+            height: 26px
+            .hover-view, .hover-view.tall
+              height: 26px
+            &:hover .hover-view
+              height: 26px
           &:hover .icon.egg
             background-image: url("../../../assets/icons/egg-hi.svg")
           &:hover .icon.sperm
