--- a/src/components/inspect-panel.sass
+++ b/src/components/inspect-panel.sass
@@ -92,6 +92,7 @@
         text-align: center
         font-size: 16px
         font-weight: 500
+        padding-bottom: 4px
     .arrow
       position: absolute
       top: 112px
@@ -110,6 +111,8 @@
         background-image: url("../assets/icons/egg.svg")
       &.sperm
         background-image: url("../assets/icons/sperm.svg")
+  .gamete-label
+    text-align: center
 
   .inspect-footer
     width: 300px
