Update pea unit images

--- a/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
@@ -9,8 +9,9 @@
         justify-content: space-around
         height: 65px
         img
-          margin: 0 0 0 4px
-          width: 30px
+          margin: 8px 0 0 4px
+          width: 28px
+          height: 53px
           transform: none
     .label-footer
       transform: translateX(-47px) translateY(52px)
