improve pea hetero selection display

--- a/src/components/stacked-organism.pea.sass
+++ b/src/components/stacked-organism.pea.sass
@@ -5,7 +5,7 @@
     height: 80%
 
   .hetero-stack
-    border-style: dashed
+    border-style: dotted
     transition-duration: 0s
 
   .genotype-label
