--- a/src/components/spaces/breeding/nest-pair.pea.sass
+++ b/src/components/spaces/breeding/nest-pair.pea.sass
@@ -71,9 +71,11 @@
         display: none
     .stacked-organism.pea
       .hetero-stack
-        transform: scaleX(0.7) scaleY(1.1)
-        border-radius: 25px
-        top: 12px
+        border-radius: 9px
+        top: 9px
+        height: 98px
+        width: 56px
+        border-width: 2px
 
   .pair-label
     opacity: 0.7
