Improve total offspring label position, offspring pen border, and reset button style

--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -168,8 +168,8 @@
       font-weight: 500
     .total-offspring
       color: $color-nav-cinder-dark2
-      top: 155px
-      left: 5px
+      top: 137px
+      left: 6px
       font-size: 10px
       font-weight: 400
       line-height: 10px
@@ -182,20 +182,21 @@
       line-height: 10px
     .reset-button-container
       top: 190px
-      left: 5px
+      left: 9px
       .reset-button
-        font-size: 8px
-        background-color: $color-simdata-brick-light3
-        height: unset
-        width: unset
-        padding: 2px 6px 0
+        font-size: 10px
+        background-color: $color-simdata-brick-light2
+        height: 38px
+        width: 38px
+        padding: 3px 6px 0
         margin: 0
         border: 2px solid white
-        border-radius: 3px
+        border-radius: 7px
         &:hover
-          background-color: $color-simdata-brick-light2
-        &:active
           background-color: $color-simdata-brick-light1
+        &:active
+          background-color: $color-simdata-brick-dark1
+          color: white
         .icon
           width: 27px
           height: 20px
@@ -228,7 +229,7 @@
       position: absolute
       top: 2px
       left: 58px
-      width: 293px
+      width: 298px
       height: 218px
       z-index: 3
       pointer-events: none
@@ -239,7 +240,7 @@
       .focus-overlay-top
         height: 8px
       .focus-overlay-bottom
-        height: 114px
+        height: 110px
       .focus-window
         width: 303px
         height: 102px
