Update pea data panel box size, genotype font and position

--- a/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.pea.sass
@@ -3,7 +3,7 @@
 .nesting-pair-data-panel.pea
   .pair-data
     .nest-display
-      height: 87px
+      height: 90px
       .mouse-holder
         display: flex
         justify-content: space-around
@@ -22,3 +22,6 @@
     .pair-data
       .right-mouse
         display: none
+
+  .pie-label
+    margin-top: -6px
