--- a/src/components/spaces/breeding/breeding-data-nest-panel.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.sass
@@ -60,11 +60,16 @@
       position: absolute
       width: 65px
       transform: translateX(-47px) translateY(51px)
-      .secondary-images, .parent-genotypes
+      .secondary-images
         display: flex
         justify-content: space-around
         img
-          width: 16px
+          width: 14px
+      .parent-genotypes
+        display: flex
+        justify-content: space-around
+        font-size: 12px
+        font-weight: 400
     .pie-chart
       margin-right: 12px
     .empty-pie
