Create mice authoring form
Our simple no-code form created using the schema got changed into a bit
of a behemoth, but this contains everything we need in the form.

Validation, errors, resetting and submitting should all work as expect.

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -52,6 +52,9 @@ $fade-time: .1s
 //
 $color-black: #000000
 $color-white: #ffffff
+$color-charcoal: #3f3f3f
+$color-charcoal-light1: #757575
+$color-charcoal-light2: #979797
 $color-key-blue: #0099ff
 $color-key-red: #de444b
 $color-key-yellow: #ffff00
