Extract common authoring components; add pea authoring

--- a/src/components/formik-authoring.sass
+++ b/src/components/formik-authoring.sass
@@ -286,3 +286,19 @@ $header-height: 60px
         &:active:enabled
           background-color: #d49600
 
+  &.peas
+    .authoring-header
+      background-color: #96e4ad
+      button
+        background-color: #d1f3db
+        &:hover:enabled
+          background-color: #96e4ad
+        &:active:enabled
+          background-color: #5dd581
+    .submit
+      button
+        background-color: #96e4ad
+        &:hover:enabled
+          background-color: #5dd581
+        &:active:enabled
+          background-color: #31bc5a
