Add markdown formatting help table

--- a/src/components/formik-authoring.sass
+++ b/src/components/formik-authoring.sass
@@ -256,6 +256,48 @@ $header-height: 60px
     .error-list
       margin: 10px
 
+    .formatting-help
+      margin-bottom: 5px
+      .toggle-help
+        margin-left: 487px
+        width: 150px
+        font-size: 14px
+        color: #1800ae
+        cursor: pointer
+        &:hover
+          text-decoration: underline
+      .formatting-help-body
+        position: relative
+        width: 626px
+        margin: 6px 0
+        border: 1px solid #bbb
+        h3
+          background-color: #eee
+          margin: 0
+          text-align: center
+        table
+          width: 100%
+          border-collapse: collapse
+          user-select: text
+          tr
+            width: 50%
+          td
+            border: 1px solid #888
+            vertical-align: top
+            padding: 5px
+            min-width: 229px
+            h1
+              font-size: 20px
+              margin: 0
+            h2
+              font-size: 17px
+              background-color: transparent
+              padding: 0
+            ol, ul
+              margin: 0 0 9px 0
+              padding: 0 17px
+
+
   .icon-button
     cursor: pointer
     .icon
