Improve inspect/collect/gamete cursor states and highlight circles

--- a/src/components/stacked-organism.sass
+++ b/src/components/stacked-organism.sass
@@ -8,7 +8,7 @@
 
   &:hover .selection-stack.show
     opacity: 1
-  &:hover .gamete-view-stack
+  &:hover .gamete-view-stack.show
     opacity: .75
   &:hover .inspect-stack
     opacity: .75
@@ -58,8 +58,6 @@
     opacity: 0
     transition-duration: .25s
     background-color: $color-nav-shamrock-light1
-    &.show
-      opacity: .75
   .inspect-stack
     position: absolute
     top: 0
