Allow user to select page text
[#178222370]

--- a/src/components/formik-authoring.sass
+++ b/src/components/formik-authoring.sass
@@ -8,6 +8,7 @@ $header-height: 60px
   color: $color-charcoal
   letter-spacing: 0.3px
   margin-bottom: 10px
+  user-select: text
 
   *
     box-sizing: border-box
