Update genotype selection text and letter spacing

--- a/src/components/formik-authoring.sass
+++ b/src/components/formik-authoring.sass
@@ -161,7 +161,7 @@ $header-height: 60px
     .backpack-items
       .backpack-item
         background-color: #ebf9fe
-        background: linear-gradient(to right, #ebf9fe 62%, transparent 62% 100%)
+        background: linear-gradient(to right, #ebf9fe 530px, transparent 530px 100%)
         margin-left: 30px
         padding: 18px 10px
         span
@@ -170,6 +170,8 @@ $header-height: 60px
         label
           display: inline
           padding-right: 10px
+        select
+          letter-spacing: 0.4px
         .delete-mouse .icon
           width: 22px
           height: 22px
